--- a/backend/package.json
+++ b/backend/package.json
@@ -31,5 +31,8 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.11"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
